    that uncommenting it does not break the setup file.

  [ Joey Hess ]
  * inline: The template can check for FIRST and LAST, which will be
    set for the first and last inlined page. Useful for templates that build
    tables and the like.
  * prettydate,ddate: Don't ignore time formats passed to displaytime
    function.
  * Pages with extensions starting with "_" are internal-use, and will
    not be rendered or web-edited.
  * RecentChanges is now a static html page, that's updated whenever a commit
    is made to the wiki. It's built as a blog using inline, so it can have
    an rss feed that users can subscribe to.
  * Removed support for sending commit notification mails. Along with it went
    the svnrepo and notify settings, though both will be ignored if left in
    setup files.

 -- Joey Hess <joeyh@debian.org>  Fri, 11 Jan 2008 15:09:37 -0500

ikiwiki (2.20) unstable; urgency=low

  * inline: Add copyright/license info on a per-post basis to atom
    feeds if available. (rss doesn't allow such info on a per-post basis)
  * Also include overall copyright/license and author info in atom feeds if
    available.
  * meta: Allow copyright/license metadata to contain arbitrary markup.
  * Call preprocessor hooks in void context during the scan pass. This allows
    the hook to determine if it's just scanning, and avoid expensive
    operations.
  * img: Detect scan mode and avoid generating and writing the image file
    during it, for a 2x speedup.
  * meta: Run in scan mode again (more intelligently) and re-add support for
    meta link.
  * Fix support for the case where metadata appears after an inline directive
    that needs to use it. This was broken in version 2.16.
  * template: Remove bogus htmlize pass added in 2.16.
  * template: Htmlize template variables, but also provide a raw version
    via `<TMPL_VAR raw_variable>`.
  * When htmlizing text, if the input is a single line with no newline,