@@ -10,4 +10,4 @@ pages to search for broken links, default is search them all.
 
 If this plugin is turned on, here's a list of broken links on this wiki:
 
-[[brokenlinks pages="* and !recentchanges/change_* and !recentchanges"]]
+[[brokenlinks pages="* and !recentchanges"]]
