@@ -9,6 +9,8 @@ Typically only the RecentChanges page will use the plugin, but you can
 use it elsewhere too if you like. It's used like this:
 
 	\[[recentchanges pages="*" num=100 template=change]]
+	\[[inline pages="internal(recentchanges/change_*)"
+	template=recentchanges show=0]]
 
 The pages describing recent changes will be created as [[subpages|subpage]]
 of the page where the `recentchanges` directive is placed.
