@@ -22,13 +22,15 @@ ikiwiki (2.21) UNRELEASED; urgency=low
   * prettydate,ddate: Don't ignore time formats passed to displaytime
     function.
   * Pages with extensions starting with "_" are internal-use, and will
-    not be rendered or web-edited.
+    not be rendered or web-edited, or matched by normal pagespecs.
+  * Add "internal()" pagespec that matches internal-use pages.
   * RecentChanges is now a static html page, that's updated whenever a commit
     is made to the wiki. It's built as a blog using inline, so it can have
     an rss feed that users can subscribe to.
   * Removed support for sending commit notification mails. Along with it went
     the svnrepo and notify settings, though both will be ignored if left in
-    setup files.
+    setup files. Also gone with it is the "user()" pagespec.
+  * Add refresh hook.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 11 Jan 2008 15:09:37 -0500
 
